erDiagram
    USER {
        uuid id PK
        string display_name
        text bio
        string phone
        string email UK
        string password
        enum role
        timestamp email_verified_at
        timestamp created_at
        timestamp updated_at
    }

    LOGIN_TOKEN {
        uuid id PK
        string email
        string token UK
        string type
        timestamp expires_at
        timestamp created_at
    }

    CLUB {
        uuid id PK
        string name
        string code UK
        text description
        string media_logo_lg
        string media_logo_sm
        timestamp created_at
        timestamp updated_at
    }

    TEAM {
        uuid id PK
        uuid club_id FK
        string label
        integer year
        enum gender
        text description
        boolean archived
        timestamp created_at
        timestamp updated_at
    }

    REVOKED_TOKEN {
        uuid id PK
        text token UK
        timestamp expires_at
        timestamp created_at
    }

    %% ── Relationships ────────────────────────────────────

    USER          ||--o{ LOGIN_TOKEN        : "requests"
    USER          ||--o{ REVOKED_TOKEN      : "revokes"
    CLUB          ||--o{ TEAM               : "has"
